3.3.4/_sources/gallery/axisartist/simple_axis_direction01.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/axisartist/simple_axis_direction01.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_axisartist_simple_axis_direction01.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axisartist_simple_axis_direction01.py:


=======================
Simple Axis Direction01
=======================

.. GENERATED FROM PYTHON SOURCE LINES 7-22



.. image:: /gallery/axisartist/images/sphx_glr_simple_axis_direction01_001.png
    :alt: simple axis direction01
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import mpl_toolkits.axisartist as axisartist

    fig = plt.figure(figsize=(4, 2.5))
    ax1 = fig.add_subplot(axisartist.Subplot(fig, 111))
    fig.subplots_adjust(right=0.8)

    ax1.axis["left"].major_ticklabels.set_axis_direction("top")
    ax1.axis["left"].label.set_text("Label")

    ax1.axis["right"].label.set_visible(True)
    ax1.axis["right"].label.set_text("Label")
    ax1.axis["right"].label.set_axis_direction("left")

    plt.show()


.. _sphx_glr_download_gallery_axisartist_simple_axis_direction01.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: simple_axis_direction01.py <simple_axis_direction01.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: simple_axis_direction01.ipynb <simple_axis_direction01.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
